<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_assignment"
            android:title="Schedule" />
        <item
            android:id="@+id/nav_workorders"
            android:icon="@drawable/ic_card_travel"
            android:title="@string/action_workorders" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_supervisor_account"
            android:title="@string/action_customers" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

</menu>
