<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/badkamer"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:screenOrientation="portrait">

    <TextView
        android:layout_width="160sp"
        android:layout_height="60sp"
        android:padding="15sp"
        android:text="@string/main_title"
        android:textSize="@dimen/text_size_standard"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#ffffff"
        app:autoSizeMinTextSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"
        app:layout_constraintHorizontal_bias="0.50"/>

    <TextView
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:padding="15sp"
        android:text="@string/main_subtitle"
        android:gravity="center"
        android:textColor="#ffffff"
        app:autoSizeMinTextSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintHorizontal_bias="0.50"/>

    <Button
        android:id="@+id/btn_workorders_today"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:text="@string/action_schedule"
        android:textColor="#ffffff"
        android:background="@drawable/btn_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <Button
        android:id="@+id/btn_workorders"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:text="@string/action_workorders"
        android:textColor="#ffffff"
        android:background="@drawable/btn_rounded"
        android:layout_marginTop="55dp"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="@+id/btn_workorders_today"
        app:layout_constraintRight_toRightOf="@+id/btn_workorders_today"
        app:layout_constraintTop_toTopOf="@+id/btn_workorders_today"
        />

    <Button
        android:id="@+id/btn_customers"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:text="@string/action_customers"
        android:textColor="#ffffff"
        android:background="@drawable/btn_rounded"
        android:layout_marginTop="55dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="@+id/btn_workorders"
        app:layout_constraintRight_toRightOf="@+id/btn_workorders"
        app:layout_constraintTop_toTopOf="@+id/btn_workorders"/>


</android.support.constraint.ConstraintLayout>